# Deezer

./: .coveragerc-e2e  .dockerignore  .env_sample  .gitignore  Dockerfile  Integration_tests_instructions.txt  NOTES.txt  README.md  compose.yaml  config.ini  config.ini.sample  cookies.txt  fly.toml  generate_playlist.py  logging_manager.py  maquette.excalidraw  pyproject.toml  requirements.txt  test_ajax_class.py  test_method_ajax_api.py  test_requete.py  test_requete2.py  test_requete_ajax.py  version.py  webapp.py
.github/workflows/: check-cookies-for-tests.yml  deploy-prod.yml  test-e2e-docker.yml  test-unit-integration.yml  update-secret.yml
extensions/chrome/: background.js  manifest.json
scripts/: check_cookies.py  get_cookies.py  renew_cookies.py
service/: __init__.py  api.py  auth.py
templates/: artist_selection.html  base.html  error.html  login.html  menu.html  playlist_to_create.html
tests/: conftest.py  test_api.py  test_integration_api.py  test_service.py
tests/e2e_tests/: test_login_flow.py
tests/integration_tests/: test_integration_api.py  test_integration_service.py
tests/unit_tests/: test_api.py  test_auth.py  test_config.py  test_service.py
utils/: configuration.py  exceptions.py  logging_manager.py  models.py  pydantic_models.py  schema.py
