[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "deezer"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "requests==2.32.5",
    "pandas==2.3.3",
    "numpy==2.3.3",
    "pydantic==2.12.4",
    "flask==3.1.2",
    "flask-session==0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*", "utils/logging_manager.py"]
